# silt

./: .gitignore  Cargo.toml  EVALUATION.md  LICENSE  README.md  ROADMAP.md  commit.sh  install.sh  language-spec.md  test_watch_file.silt  todos.md
.github/scripts/: run-test-partition.sh
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
benches/: vm_bench.rs
docs/: README.md  concurrency.md  design-decisions.md  editor-setup.md  ffi.md  friction-report.md  getting-started.md  language-guide.md  language-spec.md  stdlib-reference.md  why-silt.md
docs/language/: bindings-and-functions.md  collections.md  design-decisions.md  error-handling.md  generics.md  loops-and-pipes.md  modules.md  operators.md  pattern-matching.md  testing.md  traits.md  types.md
docs/proposals/: effect-rows.md  error-from-trait.md  stdlib-errors.md  when-let-else-match.md
docs/stdlib/: bytes.md  channel-task.md  crypto.md  encoding.md  errors.md  globals.md  http.md  index.md  int-float.md  io-fs.md  json.md  list.md  map.md  math.md  postgres.md  regex.md  result-option.md  set.md  stream.md  string.md  tcp.md  test.md  time.md  toml.md  uuid.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
examples/: app.conf  birthdays.silt  budget.silt  calculator.silt  concurrent.silt  concurrent_processor.silt  config_parser.silt  cross_module_errors.silt  csv_analyzer.silt  data.csv  data_gen.silt  diff_tool.silt  encoder.silt  error_handling.silt  expr_eval.silt  fizzbuzz.silt  http_client.silt  http_server.silt  json_time.silt  json_transform.silt  kvstore.silt  link_checker.silt  list_patterns.silt  log.txt  maze_solver.silt  pipeline.silt  records.silt  router.silt  search.silt  state_machine.silt  test_suite.silt  text_stats.silt  time_demo.silt  todo.silt  trait_zoo.silt  traits.silt
examples/data/: kvstore.json  modified.txt  report_q1.txt  report_q3.txt
examples/modules/: main.silt  mymath.silt
fuzz/: Cargo.toml  README.md  local.sh  replay.sh  seed.sh
fuzz/corpus/fuzz_formatter/: config_parser.silt  crash-round29-import-block-idempotency.silt  crash-round30-tuple-paren-underscore.silt  http_client.silt  json_transform.silt  link_checker.silt  math_test.silt  regression-commaless-params.silt  regression-disambig-parens.silt  regression-null-in-line-comment.silt  regression-trailing-inline-after-stmt.silt  regression_bug1_line_comment_dash_close_brace  regression_bug2_trailing_on_match_close  regression_bug3_trailing_on_block_comment_closer_line  round-block-comment-close-line.silt  round-call-arg-wrap-followup.silt  round-comment-attach-followup-NEW-BUG.silt  round-comment-attribution-pipeline.silt  round-decl-end-triple-string.silt  round-multiline-string-comment.silt  round-phase4-comment-in-match.silt  round-phase4-paren-arg.silt  round-triple-fold-tail.silt  round-triple-in-interp-multiline.silt  round-triple-string-in-interp.silt  round-triple-string-match-arm.silt  router.silt
fuzz/corpus/fuzz_lexer/: fizzbuzz.silt  http_server.silt  json_time.silt  maze_solver.silt  todo.silt  traits.silt
fuzz/corpus/fuzz_parser/: hello.silt  kvstore.silt
fuzz/corpus/fuzz_roundtrip/: budget.silt  concurrent_processor.silt  csv_analyzer.silt  diff_tool.silt  error_handling.silt  records.silt  round33-param-pattern-tuple.silt  text_stats.silt  time_demo.silt
fuzz/fuzz_targets/: fuzz_formatter.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_roundtrip.rs
programs/: app.conf  budget.silt  calculator.silt  colors.silt  concurrent_processor.silt  config_parser.silt  csv_analyzer.silt  data.csv  data_gen.silt  diff_tool.silt  encoder.silt  expr_eval.silt  fizz.silt  hello.silt  json_transform.silt  kvstore.silt  kvstore_data.json  link_checker.silt  log.txt  maze_solver.silt  pipeline.silt  router.silt  sample_text.txt  state_machine.silt  test.md  test.silt  test_suite.silt  text_stats.silt  todo.silt  trait_zoo.silt
programs/files/: modified.txt  notes.txt  original.txt  poem.txt  readme.txt  report_q2.txt  report_q4.txt  todo.txt
prompts/: cleanup.md  friction-analysis.md  silt-evaluation.md  type-narrowing-analysis.md
src/: ast.rs  bytecode.rs  compiler.rs  disassemble.rs  env.rs  errors.rs  formatter.rs  fuzz_invariants.rs  git.rs  intern.rs  interpreter.rs  lexer.rs  lib.rs  lockfile.rs  lsp.rs  main.rs  manifest.rs  module.rs  parser.rs  repl.rs  scheduler.rs  typechecker.rs  types.rs  update.rs  value.rs  vm.rs  watch.rs
src/builtins/: bytes.rs  collections.rs  common.rs  concurrency.rs  core.rs  crypto.rs  data.rs  encoding.rs  io.rs  mod.rs  numeric.rs  postgres.rs  stream.rs  string.rs  tcp.rs  toml.rs  uuid.rs
src/cli/: add.rs  check.rs  disasm.rs  features.rs  fmt.rs  help.rs  init.rs  lsp.rs  mod.rs  module_sources.rs  package.rs  paths.rs  pipeline.rs  repl.rs  run.rs  (+5 more)
tests/: aliased_import_runtime_tests.rs  annotation_arity_span_tests.rs  arithmetic_parity_round36_tests.rs  arity_diagnostic_direction_tests.rs  ascribed_let_binop_single_diagnostic_tests.rs  associated_types_runtime_tests.rs  associated_types_tests.rs  auto_derive_builtin_synth_tests.rs  auto_derive_dead_arm_proof_tests.rs  auto_derive_generic_synth_tests.rs  auto_derive_synth_body_tests.rs  builtin_constructor_parity_tests.rs  builtin_descriptor_tests.rs  builtin_modules_dispatch_parity_tests.rs  builtin_types_authoritative_parity_tests.rs  bytes_module_tests.rs  call_method_yield_tests.rs  call_result_option_dedup_tests.rs  callback_frame_capture_tests.rs  cancel_path_waker_leak_tests.rs  canonical_type_arch_lock_tests.rs  canonical_type_equality_phase_b_tests.rs  caret_width_tests.rs  channel_op_shape_negative_tests.rs  channel_timeout_tests.rs  ci_flake_lock_tests.rs  cli.rs  cli_add_tests.rs  cli_equals_form_tests.rs  cli_fmt_exit_code_tests.rs  cli_init_tests.rs  cli_json_hint_round36_tests.rs  cli_pipeline_type_error_filter_tests.rs  cli_project_root_tests.rs  cli_round26_tests.rs  cli_round36_tests.rs  cli_test_rendering_tests.rs  compiler_literal_bounds_tests.rs  compiler_module_path_norm_round36_tests.rs  concurrency_stress_property_tests.rs  (+200 more)
(+82 files in other folders)
