[package]
name = "silt"
version = "0.3.0"
edition = "2024"
description = "A minimal, statically-typed, expression-based language with CSP concurrency"
license = "MIT"
repository = "https://github.com/rendro/silt"
homepage = "https://silt-lang.com"

[[bin]]
name = "silt"
path = "src/main.rs"

[lib]
name = "silt"
path = "src/lib.rs"

[features]
default = ["repl", "lsp", "watch", "local-clock", "http"]
repl = ["dep:rustyline"]
lsp = ["dep:lsp-server", "dep:lsp-types"]
watch = ["dep:notify"]
local-clock = ["chrono/clock"]
http = ["dep:ureq", "dep:tiny_http"]

[[bench]]
name = "vm_bench"
harness = false

[dependencies]
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
notify = { version = "6", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
regex = "1"
rustyline = { version = "15", optional = true }
serde_json = "1"
ureq = { version = "3", optional = true }
tiny_http = { version = "0.12", optional = true }
