[package]
name = "silt"
version = "0.5.1"
edition = "2024"
description = "A minimal, statically-typed, expression-based language with CSP concurrency"
license = "MIT"
repository = "https://github.com/rendro/silt"
homepage = "https://silt-lang.com"

[[bin]]
name = "silt"
path = "src/main.rs"

[lib]
name = "silt"
path = "src/lib.rs"

[features]
default = ["repl", "lsp", "watch", "local-clock", "http"]
repl = ["dep:rustyline"]
lsp = ["dep:lsp-server", "dep:lsp-types"]
watch = ["dep:notify"]
local-clock = ["chrono/clock"]
http = ["dep:ureq", "dep:tiny_http"]
postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres", "dep:base64", "dep:fallible-iterator", "dep:uuid"]
postgres-tls = ["postgres", "dep:native-tls", "dep:postgres-native-tls"]

[[bench]]
name = "vm_bench"
harness = false

[dependencies]
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
notify = { version = "6", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
regex = "1"
rustyline = { version = "15", optional = true }
parking_lot = "0.12"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3", optional = true }
tiny_http = { version = "0.12", optional = true }
postgres = { version = "0.19", optional = true, features = ["with-uuid-1"] }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
base64 = { version = "0.22", optional = true }
fallible-iterator = { version = "0.2", optional = true }
uuid = { version = "1", optional = true, features = ["v7"] }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.4"
