[package]
name = "silt"
version = "0.10.0"
edition = "2024"
description = "A minimal, statically-typed, expression-based language with CSP concurrency"
license = "MIT"
repository = "https://github.com/rendro/silt"
homepage = "https://silt-lang.com"

[[bin]]
name = "silt"
path = "src/main.rs"

[lib]
name = "silt"
path = "src/lib.rs"

[features]
default = ["repl", "lsp", "watch", "local-clock", "http", "tcp"]
repl = ["dep:rustyline"]
lsp = ["dep:lsp-server", "dep:lsp-types"]
watch = ["dep:notify"]
local-clock = ["chrono/clock"]
http = ["dep:ureq", "dep:tiny_http"]
postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres", "dep:fallible-iterator"]
postgres-tls = ["postgres", "dep:native-tls", "dep:postgres-native-tls"]
tcp = []
tcp-tls = ["tcp", "dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
# Exposes the scheduler test-hook callbacks (`scheduler::test_hooks`) and
# the in-process scheduler harness (`scheduler::test_support`) so
# integration tests outside the crate can drive deterministic
# event-injection. Always enabled under `cfg(test)`; this feature flag
# is only needed when an external test binary needs to install hooks.
test-hooks = []

[[bench]]
name = "vm_bench"
harness = false

[dependencies]
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
notify = { version = "6", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
regex = "1"
rustyline = { version = "15", optional = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
blake2 = "0.10"
hmac = "0.12"
getrandom = "0.2"
percent-encoding = "2"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
toml_edit = "0.22"
unicode-width = "0.2"
ureq = { version = "3", optional = true }
tiny_http = { version = "0.12", optional = true }
postgres = { version = "0.19", optional = true, features = ["with-uuid-1"] }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
base64 = "0.22"
walkdir = "2"
glob = "0.3"
fallible-iterator = { version = "0.2", optional = true }
uuid = { version = "1", features = ["v4", "v7"] }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Windows-only: needed by `tcp.close` to call `CancelIoEx` on the inner
# socket handle. Winsock's `shutdown(SD_BOTH)` does not cancel an
# in-progress blocking `recv` on a sibling SOCKET handle (created via
# `WSADuplicateSocket` aka `TcpStream::try_clone`), so we explicitly
# cancel pending I/O on the handle the parked reader is using. We pull
# in the smallest feature set that exposes `CancelIoEx`, the `HANDLE`
# typedef, and the `SOCKET` typedef. Prefer `windows-sys` over
# `winapi`: it is smaller and Microsoft-maintained.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }

[dev-dependencies]
proptest = "1.4"
rcgen = "0.13"
